--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="static/css/style.css">
 </head>
 <body>
-    
+    <section>
+        <header>
+            <a href="" class="logo">Webpage-UI</a>
+            <div class="toggle" onclick="menuToggle()"></div>
+        </header>
+        <div class="glass"></div>
+        <video src="static/multimedia/bg.mp4" autoplay muted loop></video>
+    </section>
+    <script src="static/js/menu.js" type="text/javascript"></script>
 </body>
 </html>
