--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
             <div class="toggle" onclick="menuToggle()"></div>
         </header>
         <div class="glass"></div>
+        <div class="content">
+           <h2>The Web...<br><span>At your fingertip.</span></h2> 
+        </div>
         <video src="static/multimedia/bg.mp4" autoplay muted loop></video>
     </section>
     <script src="static/js/menu.js" type="text/javascript"></script>
