--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
            <h2>The Web...<br><span>At your fingertip.</span></h2> 
         </div>
         <video src="static/multimedia/bg.mp4" autoplay muted loop></video>
+        <ul class="social-media">
+            <li><a href="mailto:webpages_ui@protonmail.com">Mail</a></li>
+        </ul>
     </section>
     <script src="static/js/menu.js" type="text/javascript"></script>
 </body>
