Main webpage design done

--- a/index.html
+++ b/index.html
@@ -19,7 +19,14 @@
         </div>
         <video src="static/multimedia/bg.mp4" autoplay muted loop></video>
         <ul class="social-media">
-            <li><a href="mailto:webpages_ui@protonmail.com">Mail</a></li>
+            <li style="--i:1"><a href="mailto:webpages_ui@protonmail.com">Mail</a></li>
+            <li style="--i:2"><a href="">LinkedIn</a></li>
+        </ul>
+        <ul class="navigation">
+            <li style="--i: 1"><a href="">Home</a></li>
+            <li style="--i: 2"><a href="">About</a></li>
+            <li style="--i: 3"><a href="">Projects</a></li>
+            <li style="--i: 4"><a href="">Contact</a></li>
         </ul>
     </section>
     <script src="static/js/menu.js" type="text/javascript"></script>
