--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <section>
         <header>
-            <a href="" class="logo">Webpage-UI</a>
+            <a href="" class="logo">Webpage UI</a>
             <div class="toggle" onclick="menuToggle()"></div>
         </header>
         <div class="glass"></div>
