--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="content">
            <h2>The Web...<br><span>At your fingertip.</span></h2> 
         </div>
-        <video src="static/multimedia/bg.mp4" autoplay muted loop></video>
+        <video src="static/multimedia/bg.mp4" playsinline autoplay muted loop></video>
         <ul class="social-media">
             <li style="--i:1"><a href="mailto:webpages_ui@protonmail.com">Mail</a></li>
             <li style="--i:2"><a href="">LinkedIn</a></li>
@@ -29,6 +29,9 @@
             <li style="--i: 4"><a href="">Contact</a></li>
         </ul>
     </section>
+    <footer>
+        <a href="https://www.vecteezy.com/video/1625996-paint-in-rainbow-colors-splashing-transition">Paint in Rainbow Colors Splashing Transition Stock Videos by Vecteezy</a>
+    </footer>
     <script src="static/js/menu.js" type="text/javascript"></script>
 </body>
 </html>
