--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         </div>
         <video src="static/multimedia/bg.mp4" playsinline autoplay muted loop></video>
         <ul class="social-media">
-            <li style="--i:1"><a href="mailto:webpages_ui@protonmail.com">Mail</a></li>
-            <li style="--i:2"><a href="">LinkedIn</a></li>
+            <li style="--i:1"><a href="mailto:webpages_ui@protonmail.com">E-Mail</a></li>
+            <li style="--i:2"><a href="">Linked-In</a></li>
         </ul>
         <ul class="navigation">
             <li style="--i: 1"><a href="">Home</a></li>
